all links proper

--- a/index.html
+++ b/index.html
@@ -109,17 +109,17 @@
       <p>Build Rich-Context AI Apps with Anthropic’s Model Context Protocol — tools, resources, prompts, and deploy patterns.</p>
     </a>
 
-    <a class="card" href="posts/sorting-searching.html">
+    <a class="card" href="posts/Sorting-Searching.html">
       <h3>Sorting &amp; Searching</h3>
       <p>Deep dive into classic algorithms: binary search, quicksort, mergesort, and when to use each.</p>
     </a>
 
-    <a class="card" href="posts/leetcode-core-15.html">
+    <a class="card" href="posts/Leetcode-Core-15.html">
       <h3>15 Core LeetCode Questions</h3>
       <p>Handpicked problems to build intuition across arrays, DP, graphs, tries, and more.</p>
     </a>
 
-    <a class="card" href="posts/big-o-notation.html">
+    <a class="card" href="posts/Big-O-Notation.html">
       <h3>Big O Notation</h3>
       <p>Time &amp; space complexity demystified, with practical examples in Python and JavaScript.</p>
     </a>
