--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
 
   <header>
     <h1>🍵 Kargi’s Log</h1>
-    <p>Documenting my learning journey — unfiltered, with a cup of matcha in hand.</p>
+    <p>Documenting my learning journey unfiltered, with a cup of matcha in hand.</p>
   </header>
 
   <div class="card-grid">
