--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
       margin-top: 0;
       margin-bottom: 0.5rem;
       font-size: 1.4rem;
-      color: #7bed9f;
+      color: #195a2e;
     }
     .card p {
       margin: 0;
@@ -104,6 +104,11 @@
   </header>
 
   <div class="card-grid">
+
+    <a class="card" href="posts/Alpha-Evolve.html">
+      <h3>AlphaEvolve</h3>
+      <p>Google Deepmind's paper</p>
+    </a>
     <a class="card" href="posts/Build-Rich-Context-AI-Apps-with-Anthropic.html">
       <h3>Mastering MCP</h3>
       <p>Build Rich-Context AI Apps with Anthropic’s Model Context Protocol — tools, resources, prompts, and deploy patterns.</p>
