green color change

--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
       margin-top: 0;
       margin-bottom: 0.5rem;
       font-size: 1.4rem;
-      color: #195a2e;
+      color: #87d5a0;
     }
     .card p {
       margin: 0;
