--- a/index.html
+++ b/index.html
@@ -105,6 +105,13 @@
 
   <div class="card-grid">
 
+    <a class="card" href="posts/AlphaProof.html">
+      <h3>AlphaEvolve</h3>
+      <p>Google Deepmind's
+        
+      </p>
+    </a>
+
     <a class="card" href="posts/Alpha-Evolve.html">
       <h3>AlphaEvolve</h3>
       <p>Google Deepmind's paper</p>
