--- a/index.html
+++ b/index.html
@@ -106,10 +106,9 @@
   <div class="card-grid">
 
     <a class="card" href="posts/AlphaProof.html">
-      <h3>AlphaEvolve</h3>
+      <h3>AlphaProof</h3>
       <p>Google Deepmind's
-        
-      </p>
+
     </a>
 
     <a class="card" href="posts/Alpha-Evolve.html">
