--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
 
     <a class="card" href="posts/AlphaProof.html">
       <h3>AlphaProof</h3>
-      <p>Google Deepmind's
+       <p>Google Deepmind's</p>
 
     </a>
 
