--- a/index.html
+++ b/index.html
@@ -105,11 +105,17 @@
 
   <div class="card-grid">
 
-    <a class="card" href="posts/AlphaProof.html">
-      <h3>AlphaProof</h3>
-       <p>Google Deepmind's</p>
+    <a class="card" href="posts/Alpha-Evolve.html">
+      <h3>AlphaEvolve</h3>
+      <p>Google Deepmind's paper</p>
+    </a>
+    
+    <a class="card" href="posts/DSA.html">
+      <h3>DSA</h3>
+       <p>DSA</p>
 
     </a>
+    
 
     <a class="card" href="posts/Alpha-Evolve.html">
       <h3>AlphaEvolve</h3>
